dodałem obsługę wyjątku dla true/false w opisie ale nadal ponowne wywołanie programu nadpisuje dwa nulle w kolumnach